<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Terminus Client</string>
    
    <string name="menu_settings">Settings</string>
    <string name="menu_reconnect">Reconnect</string>
    <string name="menu_disconnect">Disconnect</string>
    
   	<string name="heading_activity">Terminus Settings</string>
    <string name="heading_network">NETWORK</string>
	<string name="heading_camera">CAMERA</string>
	<string name="heading_sensors">SENSORS</string>
	<string name="heading_sound">SOUND</string>
	<string name="heading_debug">LAUNCH</string>
	
	<string name="hint_ip">Enter IP Address</string>
	<string name="hint_port">Enter Port Number</string>
	<string name="hint_location">Enter Location</string>
	<string name="hint_nickname">Enter Nickname</string>
	
	<string name="camera_opt_none">No Camera</string>
	<string name="camera_opt_native">OpenCV NativeCameraView</string>
	<string name="camera_opt_java">OpenCV JavaCameraView</string>
	<string name="camera_opt_lowlevel">Low Level Camera</string>
	
	<string name="sound_opt">Use Audio Monitoring</string>
	<string name="sound_sensitivity">Sound Sensitivity</string>
	<string name="sound_inter">Sample Interval(ms)</string>
	
	<string name="hint_priority">Minimum Priority</string>
</resources>